--- a/citations.html
+++ b/citations.html
@@ -11,7 +11,16 @@
      <!-- TO DO 
      add a nav section and take out the nav from the header-->
      <!--Sticky Navigation Menu-->
-     <nav class
+     <nav class="navbar">
+        <a href="index.html" class="logo" >CITATIONS</a>
+        <div class="nav-links" id="navLinks">
+            <a href="index.html" >Home</a>
+            <a href="#image-sources" >Image Sources</a>
+            <a href="#video-sources" >Video Sources</a>
+            <a href="citations.html" >Citations</a>
+
+        </div>
+     </nav>
     <header>
         <h1>Source Citations</h1>
         <nav>
@@ -21,14 +30,14 @@
     </header>
 
     <main>
-        <section>
+        <section id="image-sources">
             <h2>Image Sources</h2>
             <ul>
                 <li><a href="https://example.com/" target="_blank">Sunset Image</a> by Photographer Name</li>
             </ul>
         </section>
 
-        <section>
+        <section id="video-sources">
             <h2>Video Sources</h2>
             <ul>
                 <li><a href="https://example.com/" target="_blank">Example Video</a> by Video Creator</li>
