--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 
     <!-- TO DO 
      add a nav section and take out the nav from the header-->
+     <!--Sticky Navigation Menu-->
+     <nav class="navbar">
+        <a href="index.html" class="logo">PROJECT</a>
+        <div class="nav-links" id="navLinks">
+            <a href="index.html">Home</a>
+            <a href="#nature">Nature</a>
+            <a href="#video">Video</a>
+            <a href="citations.html">Citations</a>
+        </div>
+        <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
+     </nav>
     <header>
         <h1>My School Project</h1>
         <nav>
@@ -19,7 +30,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="nature"> 
             <h2 class="home">Beautiful Nature</h2>
             <figure>
                 <div class="image-container">
@@ -34,7 +45,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="video">
             <h2 class="home">Example Video</h2>
             <figure> 
                 <iframe width="420" height="315"
